Add assets for line pay

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="payment_method_alipay">Alipay</string>
     <string name="payment_method_union_pay">UnionPay</string>
     <string name="payment_method_paypal">PayPal</string>
+    <string name="payment_method_linepay">Line Pay</string>
 
     <string name="button_pay_title">Pay</string>
     <string name="content_processing">Processing…</string>
