--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -15,4 +15,5 @@
     <string name="dialog_button_title_cancel">キャンセル</string>
     <string name="test_mode_switch_restart_prompt">テストモード変更のために、アプリの再起動が必要です。</string>
     <string name="payment_method_paypal">PayPal</string>
+    <string name="payment_method_linepay">Line Pay</string>
 </resources>
